--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
     <h2>Escribir</h2>
     <input type="text">
     <a href="https://www.facebook.com/josealexander.callecastaneda">ALEX_CALLE</a>
-    
-    
+    <a href="https://youtu.be/GRCE2VWl0D0">nuevo_video</a>    
   </div>
   
   
